.page-sidebar{ 	background-image:url(../images/misc/menu-bg.png); 	background-repeat:repeat; 	background-size:75px 75px; 	width:400px; 	display:block; 	position:absolute; 	z-index:2 !important; 	top:0px; 	left:0px; 	bottom:0px; 	overflow:hidden; 	position:fixed; }
.page-sidebar-scroll{
	z-index:2 !important;
	position:relative;
    width:300px;
    overflow: scroll;
    overflow-x: hidden;
	height:100%;

	}

--- a/styles/colors/red.css
+++ b/styles/colors/red.css
@@ -4,6 +4,6 @@
 .solid-color{
 	/* background-color:#c0392b;	
 	background-color:#93352b	*/
-	background-color: #FFB501;
+	background-color: #F6FF00;
 	margin-bottom: 20px;
 }
